Feat/st changes: SNI-4321 Merge changes to PET Release branch (#1129)
* ST-1381: Updated label name as its duplicate to the one defined in CaseTypeTab

* ST-1364 Hearing value drop down

* ST-1361 Order file duplication

* ST-1343 Search results (#923)

Co-authored-by: hmctscivil <version1rhel@hmctscivil.mshome.net>

* ST-1343 Due date calculation error (#954)

* ST-1343 Due date calculation error

* ST-1343 Due date calculation error

---------

Co-authored-by: hmctscivil <version1rhel@hmctscivil.mshome.net>

* ST-1343 Due date fix (#964)

Co-authored-by: hmctscivil <version1rhel@hmctscivil.mshome.net>
# Conflicts:
#	src/main/java/uk/gov/hmcts/sptribs/ciccase/model/CicCase.java

* ST-1343 Removed unused method

* apply fix ST-1260 and ST-1262 (#882)

* Feat/st 1261  CIC3 Rule 27 (Order) (#887)

ST-1261 Rule 27 Template for orders

Co-authored-by: hmctscivil <version1rhel@hmctscivil.mshome.net>

* ST-1364: Fixed pmdMain issues

* ST-1364: Added CVE suppressions

* SNI-4321: Changed Calendar to LocalDateTime

---------

Co-authored-by: hmctscivil <version1rhel@hmctscivil.mshome.net>
Co-authored-by: ElifDenizEsea <61947470+ElifDenizEsea@users.noreply.github.com>
Co-authored-by: Sabir <123706441+Sabir-v1@users.noreply.github.com>