@@ -3,8 +3,8 @@ package uk.gov.hmcts.sptribs.recordlisting;
 import feign.FeignException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 import uk.gov.hmcts.ccd.sdk.type.DynamicList;
 import uk.gov.hmcts.ccd.sdk.type.DynamicListElement;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
@@ -15,9 +15,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
@@ -40,8 +38,8 @@ public class LocationService {
 
     public DynamicList getHearingVenuesByRegion(String regionId) {
         final HearingVenue[] hearingVenues = getCourtVenues(regionId);
-        HearingVenue[] filteredHearingVenues = hearingVenues == null ? null : Arrays.stream(hearingVenues)
-                .filter(v -> COURT_TYPE_ID.equals(v.getCourtTypeId())).toArray(HearingVenue[]::new);
+        HearingVenue[] filteredHearingVenues = Arrays.stream(hearingVenues)
+                    .filter(v -> COURT_TYPE_ID.equals(v.getCourtTypeId())).toArray(HearingVenue[]::new);
         return populateVenueDynamicList(filteredHearingVenues);
     }
 
@@ -51,58 +49,54 @@ public class LocationService {
     }
 
     private Region[] getRegions() {
-        ResponseEntity<Region[]> regionResponseEntity = null;
 
         try {
-            regionResponseEntity = locationClient.getRegions(
+            List<Region> list = locationClient.getRegions(
                 authTokenGenerator.generate(),
                 httpServletRequest.getHeader(AUTHORIZATION),
                 REGION_ALL);
+            if (CollectionUtils.isEmpty(list)) {
+                return new Region[0];
+            }
+            return list.toArray(new Region[0]);
         } catch (FeignException exception) {
             log.error("Unable to get Region data from reference data with exception {}",
                 exception.getMessage());
         }
 
-        return Optional.ofNullable(regionResponseEntity)
-            .map(response ->
-                Optional.ofNullable(response.getBody())
-                    .orElseGet(() -> null)
-            )
-            .orElseGet(() -> null);
+        return new Region[0];
     }
 
     private HearingVenue[] getCourtVenues(String regionId) {
-        ResponseEntity<HearingVenue[]> hearingVenueResponseEntity = null;
 
         try {
-            hearingVenueResponseEntity = locationClient.getHearingVenues(
+            List<HearingVenue> list = locationClient.getHearingVenues(
                 authTokenGenerator.generate(),
                 httpServletRequest.getHeader(AUTHORIZATION),
                 regionId,
                 "Y");
+            if (CollectionUtils.isEmpty(list)) {
+                return new HearingVenue[0];
+            }
+            return list.toArray(new HearingVenue[0]);
         } catch (FeignException exception) {
             log.error("Unable to get Hearing venue data from reference data with exception {}",
                 exception.getMessage());
         }
 
-        return Optional.ofNullable(hearingVenueResponseEntity)
-            .map(response ->
-                Optional.ofNullable(response.getBody())
-                    .orElseGet(() -> null)
-            )
-            .orElseGet(() -> null);
+        return new HearingVenue[0];
     }
 
     private DynamicList populateRegionDynamicList(Region... regions) {
         List<String> regionList = Objects.nonNull(regions)
-            ? Arrays.asList(regions).stream().map(v -> v.getRegionId() + HYPHEN + v.getDescription()).collect(Collectors.toList())
+            ? Arrays.stream(regions).map(v -> v.getRegionId() + HYPHEN + v.getDescription()).toList()
             : new ArrayList<>();
 
         List<DynamicListElement> regionDynamicList = regionList
             .stream()
             .sorted()
             .map(region -> DynamicListElement.builder().label(region).code(UUID.randomUUID()).build())
-            .collect(Collectors.toList());
+            .toList();
 
         return DynamicList
             .builder()
@@ -112,14 +106,14 @@ public class LocationService {
 
     private DynamicList populateVenueDynamicList(HearingVenue... hearingVenues) {
         List<String> venueList = Objects.nonNull(hearingVenues)
-            ? Arrays.asList(hearingVenues).stream().map(v -> v.getCourtName() + HYPHEN + v.getCourtAddress()).collect(Collectors.toList())
+            ? Arrays.stream(hearingVenues).map(v -> v.getCourtName() + HYPHEN + v.getCourtAddress()).toList()
             : new ArrayList<>();
 
         List<DynamicListElement> hearingVenueList = venueList
             .stream()
             .sorted()
             .map(venue -> DynamicListElement.builder().label(venue).code(UUID.randomUUID()).build())
-            .collect(Collectors.toList());
+            .toList();
 
         return DynamicList
             .builder()
